--- a/header.tex
+++ b/header.tex
@@ -16,6 +16,7 @@
 \usepackage{subcaption}
 \usepackage[section,below]{placeins}
 
+\usepackage[table]{xcolor} 
 
 \newcommand{\goodbox}{\mbox{\ooalign{\textcolor{ao}{$\checkmark$}\cr\hidewidth$\square$\hidewidth\cr}}}
 \newcommand{\badbox}{\mbox{\ooalign{\textcolor{red}{$\checkmark$}\cr\hidewidth$\square$\hidewidth\cr}}}
