Small name adjustment to checkboxes for D-Egg FAT

--- a/PyTex/header.tex
+++ b/PyTex/header.tex
@@ -23,14 +23,14 @@
 \newcommand{\okbox}{\mbox{\ooalign{\textcolor{amber}{$\checkmark$}\cr\hidewidth$\square$\hidewidth\cr}}}
 
 \newcommand{\pass}{\begin{center}\begin{tabular}{ccccc}\\
-    {\Huge \goodbox  PASS}  & \hspace{2cm} & \framebox(16,16){} {\Huge PASS-WAIVED} & \hspace{2cm} & \framebox(16,16){} {\Huge FAIL}
+    {\Huge \goodbox  PASS}  & \hspace{2cm} & \framebox(16,16){} {\Huge WARN} & \hspace{2cm} & \framebox(16,16){} {\Huge FAIL}
 \end{tabular}\end{center}}
 
 \newcommand{\fail}{\begin{center}\begin{tabular}{ccccc}\\
-    \framebox(16,16){} {\Huge PASS} & \hspace{2cm} & \framebox(16,16){} {\Huge PASS-WAIVED} & \hspace{2cm} & {\Huge \badbox  FAIL}
+    \framebox(16,16){} {\Huge PASS} & \hspace{2cm} & \framebox(16,16){} {\Huge WARN} & \hspace{2cm} & {\Huge \badbox  FAIL}
 \end{tabular}\end{center}}
 
 \newcommand{\warn}{\begin{center}\begin{tabular}{ccccc}\\
-    \framebox(16,16){} {\Huge PASS} & \hspace{2cm} & {\Huge \okbox  PASS-WAIVED} & \hspace{2cm} & \framebox(16,16){} {\Huge FAIL}
+    \framebox(16,16){} {\Huge PASS} & \hspace{2cm} & {\Huge \okbox  WARN} & \hspace{2cm} & \framebox(16,16){} {\Huge FAIL}
 \end{tabular}\end{center}}
 
